--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="row">
+  <div class="span10 offset3">
 <h1>Editing member</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @member %> |
-<%= link_to 'Back', members_path %>
+<li class="btn btn-small"><%= link_to 'Show', @member %></li> |
+<li class="btn btn-small"><%= link_to 'Back', members_path %></li>
+  </div>
+</div>
