--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,5 +1,9 @@
+<dic class="row">
+  <div class="span10 offset3">
 <h1>New member</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', members_path %>
+<li class="btn btn-small"><%= link_to 'Back', members_path %>
+  </div>
+</div>
