--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -11,35 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
+
     <%= f.label :mode_of_payment %><br />
     <%= f.select :mode_of_payment, Payment::Payment_modes %>
-  </div>
-  <div class="field">
-    <%= f.label :cheque_no %><br />
+
+    <%= f.label :cheque_no_if_cheque %><br />
     <%= f.text_field :cheque_no %>
-  </div>
-  <div class="field">
-    <%= f.label :bank_name %><br />
+
+
+    <%= f.label :bank_name_if_cheque %><br />
     <%= f.text_field :bank_name %>
-  </div>
-  <div class="field">
+
+
     <%= f.label :amount %><br />
     <%= f.number_field :amount %>
-  </div>
-  <div class="field">
-    <%= f.label :total_amount %><br />
-    <%= f.number_field :total_amount %>
-  </div>
-  <div class="field">
-    <%= f.label :balance %><br />
-    <%= f.number_field :balance %>
-  </div>
-  <div class="field">
+
+
     <%= f.label :date%></br>
-    <%= f.date_select :date%>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.date_select :date%></br>
+
+
+    <%= f.submit "Make payment", class: "btn btn-large btn-primary"%>
+
 <% end %>
