--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,5 +1,9 @@
+<div class="row">
+  <div class="span10 offset3">
 <h1>New payment</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', member_payments_path(@member) %>
+<li class="btn btn-small"><%= link_to 'Back', member_payments_path(@member) %></li>
+  </div>
+</div>
