--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,35 +1,35 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Mode of payment:</b>
-  <%= @payment.mode_of_payment %>
-</p>
-
-<p>
-  <b>Cheque no:</b>
-  <%= @payment.cheque_no %>
-</p>
-
-<p>
-  <b>Bank name:</b>
-  <%= @payment.bank_name %>
-</p>
-
-<p>
-  <b>Amount:</b>
-  <%= @payment.amount %>
-</p>
-
-<p>
-  <b>Total amount:</b>
-  <%= @payment.total_amount %>
-</p>
-
-<p>
-  <b>Balance:</b>
-  <%= @payment.balance %>
-</p>
+<ul class="breadcrumb">
+        <li><%= link_to "#{@member.First_Name+ " " + @member.Last_Name}", @member%><span class="divider">/</span></li>
+        <li><%= link_to "payments", member_payments_path(@member)%><span class="divider">/</span></li>
+        <li class="active">payment</li>
+</ul>
 
 
-<%= link_to 'Edit', edit_member_payment_path(@member, @payment) %> |
-<%= link_to 'Back', member_payments_path(@member) %>
+<span class="label label-success"><%= notice %></span>
+<table class="table table-striped table-bordered table-hover table-condensed">
+    <tr>
+     <th>Date</th>
+     <th>Invoice</th>
+     <th>Mode of payment</th>
+     <th>Cheque no</th>
+     <th>Bank name</th>
+     <th>Amount</th>
+     <th>Balance</th>
+     <th></th>
+    </tr>
+
+    <tr>
+      <td><%= @payment.date%></td>
+      <td><%= @payment.invoice%></td>
+      <td><%= @payment.mode_of_payment %></td>
+      <td><%= @payment.cheque_no %></td>
+      <td><%= @payment.bank_name %></td>
+      <td><%= @payment.amount %></td>
+      <td><%= @payment.balance %></td>
+      <td><li class="btn btn-mini btn-warning"><%= link_to 'Edit',edit_member_payment_path(@member, @payment)%></li></td>
+
+    </tr>
+
+  </table>
+
+<%= link_to 'Back', member_payments_path(@member), class: "btn"%>
