--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,28 @@
-<h1>Admin#index</h1>
-<p>Find me in app/views/admin/index.html.erb</p>
+ <h1>Listing payments</h1>
+
+  <table class="table table-striped table-bordered table-hover table-condensed">
+    <tr>
+     <th>Date</th>
+     <th>Member</th>
+     <th>Invoice</th>
+     <th>Mode of payment</th>
+     <th>Cheque no</th>
+     <th>Bank name</th>
+     <th>Amount</th>
+     <th>Balance</th>
+
+    </tr>
+
+  <% @payments.each do |payment| %>
+    <tr>
+      <td><%= payment.date%></td>
+      <td><%= payment.member.First_Name%></td>
+      <td><%= payment.invoice%></td>
+      <td><%= payment.mode_of_payment %></td>
+      <td><%= payment.cheque_no %></td>
+      <td><%= payment.bank_name %></td>
+      <td><%= payment.amount %></td>
+      <td><%= payment.balance %></td>
+    </tr>
+  <% end %>
+  </table>
