--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,28 +1,34 @@
- <h1>Listing payments</h1>
+<h1> Judges with late payments</h1>
+<table class="table table-striped table-borederd table-condensed table-hover">
+  <tr>
+    <th>First name</th>
+    <th>Last name</th>
+    <th>Designation</th>
+    <th>Email address</th>
+    <th>Cell number</th>
+    <th>Region</th>
+    <th>Active</th>
+    <th>Balance</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 
-  <table class="table table-striped table-bordered table-hover table-condensed">
-    <tr>
-     <th>Date</th>
-     <th>Member</th>
-     <th>Invoice</th>
-     <th>Mode of payment</th>
-     <th>Cheque no</th>
-     <th>Bank name</th>
-     <th>Amount</th>
-     <th>Balance</th>
+<% @members.each do |member| %>
+  <tr>
+    <td><%= member.First_Name %></td>
+    <td><%= member.Last_Name %></td>
+    <td><%= member.Designation %></td>
+    <td><%= member.Email_Address %></td>
+    <td><%= member.Cell_Number %></td>
+    <td><%= member.Region %></td>
+    <td><%= member.active %></td>
+    <td><%= member.balance%></td>
+    <td><%= link_to 'Show', member, class: "btn btn-mini btn-info" %></td>
+    <td><%= link_to 'Edit', edit_member_path(member), class: "btn btn-mini btn-warning"%></td>
+    <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-mini btn-danger" %></td>
+  </tr>
+<% end %>
+</table>
 
-    </tr>
-
-  <% @payments.each do |payment| %>
-    <tr>
-      <td><%= payment.date%></td>
-      <td><%= payment.member.First_Name%></td>
-      <td><%= payment.invoice%></td>
-      <td><%= payment.mode_of_payment %></td>
-      <td><%= payment.cheque_no %></td>
-      <td><%= payment.bank_name %></td>
-      <td><%= payment.amount %></td>
-      <td><%= payment.balance %></td>
-    </tr>
-  <% end %>
-  </table>
+<br />
