--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,39 @@
     <a class="brand">Name</a>
     <%if session[:user_id]%>
     <ul class="nav pull-right">
-      <li><%= link_to "Payment plans", payment_plans_path%></li>
-      <li class="active"><%= link_to "Members", members_path%></li>
+      <li><%= link_to "Late payments", judges_with_late_payments_path%></li>
+      <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        Payment Charges <b class="caret"></b>
+      </a>
+      <ul class="dropdown-menu">
+          <li><%= link_to "View current payment charges", payment_plans_path%></li>
+          <li><%= link_to "Add new payment charges", new_payment_plan_path%></li>
+      </ul>
+      </li>
+      <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+         Members <b class="caret"></b>
+      </a>
+      <ul class="dropdown-menu">
+       <li> <%= link_to "View Members", members_path%></li>
+       <li><%= link_to "Add a new member", new_member_path%></li>
+      </ul>
+      </li>
       <li><%= link_to "Invoice", invoice_path%></li>
-      <li><%= link_to 'Users', users_path%></li>
+      <li><%= link_to "Payments", all_payments_path%></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+         Users<b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><%= link_to 'View Users', users_path%><li>
+          <li><%= link_to "Add a new user", new_user_path%></li>
+        </ul>
+      </li>
+
       <li><%= link_to 'Logout', logout_path, :method => :delete %></li>
+
     </ul>
     <%else%>
       <ul class="nav pull-right">
@@ -28,6 +56,13 @@
 </nav>
 </header>
 <section id="main">
+<%if session[:user_id]%>
+<%= form_tag search_path, :method => 'get', :class => "form-search pull-right" do %>
+  <%= text_field_tag :first, params[:first], placeholder: "First Name"%>
+  <%= text_field_tag :last, params[:last], placeholder: "Last Name"%>
+  <%= submit_tag "Search", :name => nil, class: "btn"%>
+<%end%>
+<%end%>
 <%= yield %>
 </section>
 
