--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,14 +1,15 @@
-<h1>Listing members</h1>
+<span class="label label-warning"><%= notice%></span>
+<h1>All members</h1>
 
 <table class="table table-striped table-borederd table-condensed table-hover">
   <tr>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>Designation</th>
+    <th><%= sortable "First_Name" ,"First Name"%></th>
+    <th><%= sortable "Last_Name", "Last Name" %></th>
+    <th><%= sortable "Designation"%></th>
     <th>Email address</th>
     <th>Cell number</th>
-    <th>Region</th>
-    <th>Active</th>
+    <th><%= sortable "Region"%></th>
+    <th><%= sortable "Active"%></th>
     <th></th>
     <th></th>
     <th></th>
@@ -32,4 +33,4 @@
 
 <br />
 
-<%= link_to 'New Member', new_member_path %>
+
