--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="row">
+  <div class="span10 offset3">
 <h1>Editing user</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
+</div>
+</div>
