--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,9 @@
+<div class="row">
+  <div class="span10 offset3">
 <h1>New user</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', users_path %>
+ </div>
+</div>
