--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
-<p id="notice"><%= notice %></p>
+<span class="label label-success"><%= notice %></span>
 
-<table class="table table-striped table-bordered table-hover table-condensed"
+<table class="table table-striped table-bordered table-hover table-condensed">
   <tr>
     <th>Name</th>
     <th>Hashed password</th>
@@ -15,7 +15,7 @@
     <td><%= link_to 'Edit', edit_user_path(@user), class: "btn btn-mini btn-warning"%></td>
   </tr>
 
-</table
+</table>
 
 
 
