--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,36 +1,9 @@
 <span class="label label-warning"><%= notice%></span>
 <h1>All members</h1>
 
-<table class="table table-striped table-borederd table-condensed table-hover">
-  <tr>
-    <th><%= sortable "First_Name" ,"First Name"%></th>
-    <th><%= sortable "Last_Name", "Last Name" %></th>
-    <th><%= sortable "Designation"%></th>
-    <th>Email address</th>
-    <th>Cell number</th>
-    <th><%= sortable "Region"%></th>
-    <th><%= sortable "Active"%></th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @members.each do |member| %>
-  <tr>
-    <td><%= member.First_Name %></td>
-    <td><%= member.Last_Name %></td>
-    <td><%= member.Designation %></td>
-    <td><%= member.Email_Address %></td>
-    <td><%= member.Cell_Number %></td>
-    <td><%= member.Region %></td>
-    <td><%= member.active %></td>
-    <td><%= link_to 'Show', member, class: "btn btn-mini btn-info" %></td>
-    <td><%= link_to 'Edit', edit_member_path(member), class: "btn btn-mini btn-warning"%></td>
-    <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-mini btn-danger" %></td>
-  </tr>
-<% end %>
-</table>
+<%= render 'table'%>
 
 <br />
 
 
+<%= will_paginate @members%>
