--- a/app/views/payment_plans/edit.html.erb
+++ b/app/views/payment_plans/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span10 offset3">
-<h1>Editing payment_plan</h1>
+<h1>Editing payment charges</h1>
 
 <%= render 'form' %>
 
