--- a/app/views/payment_plans/new.html.erb
+++ b/app/views/payment_plans/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class ="span10 offset3">
-<h1>New payment_plan</h1>
+<h1>New payment charges</h1>
 
 <%= render 'form' %>
 
