--- a/app/views/payment_plans/show.html.erb
+++ b/app/views/payment_plans/show.html.erb
@@ -8,9 +8,9 @@
     <th></th>
   </tr>
   <tr>
-    <td><%= @payment_plan.Judge %></td>
-    <td><%= @payment_plan.Magistrate %></td>
-    <td><%= @payment_plan.Kadhi %></td>
+    <td><%= @payment_plan.judge %></td>
+    <td><%= @payment_plan.magistrate %></td>
+    <td><%= @payment_plan.kadhi %></td>
     <td><%= @payment_plan.created_at.to_date%></td>
     <td><%= link_to 'Edit', edit_payment_plan_path(@payment_plan), class: "btn btn-warning btn-mini"%></td>
 
