--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,10 +1,14 @@
 <ul class="breadcrumb">
-  <li><%= link_to "#{@member.First_Name+ " " + @member.Last_Name}", @member %><span class="divider">/</span></li>
+  <li><%= link_to "#{@member.first_name+ " " + @member.last_name}", @member %><span class="divider">/</span></li>
   <li class="active">payments</li>
 </ul>
 <section>
-  <h1>Listing payments</h1>
-
+  <section class="row-fluid">
+  <h1 class="span11"><%= "#{@member.first_name}'s payments"%></h1>
+  <%if @member.ever_active?%>
+  <%= link_to image_tag("pdf.jpeg", size: "50x20"), member_payments_path(@member, format: :pdf), class: "span1 pull-right"%>
+  <%end%>
+  </secion>
   <table class="table table-striped table-bordered table-hover table-condensed">
     <tr>
      <th>Date</th>
@@ -27,8 +31,8 @@
       <td><%= payment.bank_name %></td>
       <td><%= payment.amount %></td>
       <td><%= payment.balance %></td>
-      <td><li class="btn btn-mini btn-info"><%= link_to 'Show',[@member, payment]%></li></td>
-      <td><li class="btn btn-danger btn-mini"><%= link_to 'Destroy', [@member, payment], method: :delete, data: { confirm: 'Are you sure?' }%></li></td>
+      <td><%= link_to 'Show',[@member, payment], class: "btn btn-mini btn-info"%></td>
+      <td><%= link_to 'Destroy', [@member, payment], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"%></td>
     </tr>
   <% end %>
   </table>
