--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,5 @@
 
 <section class="hero-unit center" id="splash">
-<h1>Welcome to (Name of the system)</h1>
+<h3>KENYA MAGISTRATES AND JUDGES ASSOCIATION MEMBER SUBSCRIPTION</h3>
+<%= image_tag("logo.jpg")%>
 </section>
