--- a/app/views/members/_table.html.erb
+++ b/app/views/members/_table.html.erb
@@ -1,12 +1,13 @@
+
 <table class="table table-striped table-borederd table-condensed table-hover">
   <tr>
-    <th><%= sortable "first_name" ,"First Name"%></th>
-    <th><%= sortable "last_name", "Last Name" %></th>
-    <th><%= sortable "designation"%></th>
+    <th><%= sort_link @search, :first_name,"First Name"%></th>
+    <th><%= sort_link @search, :last_name, "Last Name" %></th>
+    <th><%= sort_link @search, :designation, "Designation"%></th>
     <th>Email address</th>
     <th>Cell number</th>
-    <th><%= sortable "region", "Region"%></th>
-    <th><%= sortable "active", "Active"%></th>
+    <th><%= sort_link @search, :region, "Region"%></th>
+    <th><%= sort_link @search, :active, "Active"%></th>
     <th></th>
     <th></th>
     <th></th>
