--- a/app/views/payment_plans/index.html.erb
+++ b/app/views/payment_plans/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing payment_plans</h1>
+<h1>Listing payment plans</h1>
 
 <table class="table table-striped table-bordered table-hover table-condensed">
   <tr>
