--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -6,6 +6,12 @@
 
 
 <span class="label label-success"><%= notice %></span>
+  <section class="row-fluid">
+  <h1 class="span11"><%= "#{@member.first_name}'s payments"%></h1>
+
+  <%= link_to image_tag("pdf.jpeg", size: "50x20"), member_payment_path([@member, @payment], format: :pdf), class: "span1 pull-right"%>
+
+  </secion>
 <table class="table table-striped table-bordered table-hover table-condensed">
     <tr>
      <th>Date</th>
