--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -9,7 +9,7 @@
   <section class="row-fluid">
   <h1 class="span11"><%= "#{@member.first_name}'s payments"%></h1>
 
-  <%= link_to image_tag("pdf.jpeg", size: "50x20"), member_payment_path(@payment, format: :pdf), class: "span1 pull-right"%>
+  <%= link_to image_tag("pdf.jpeg", size: "50x20"), member_payment_path(@member, @payment, format: :pdf), class: "span1 pull-right"%>
 
   </secion>
 <table class="table table-striped table-bordered table-hover table-condensed">
