--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -5,7 +5,7 @@
   </tr>
   <tr>
     <td>Recieved from</td>
-    <td><%= "#{@member.first_name} #{@member.last_name} payments"%></td>
+    <td><%= "#{@member.first_name} #{@member.last_name}"%></td>
   </tr>
   <tr>
     <td>Amount of Kshs</td>
@@ -24,7 +24,7 @@
       </tr>
       <tr>
           <td>Bank name</td>
-          <td<%= @payment.bank_name%></td>
+          <td><%= @payment.bank_name%></td>
       </tr>
     <%end%>
   <tr>
