--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,1 +1,10 @@
-<h1> come baby come</h1>
+<% img_tag("logo.gif", size: "10*10"%>
+<p>
+  The secretariat
+  kenya Magistrates and Judges Association
+  Milimani law courts,2nd floor,room no 244
+  p.o Box 30041-00100
+  Nairobi,Kenya
+  Telephone:3588237
+  Email kmjasec@yahoo.com,kmjasec@gmail.com
+</p>
