--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,4 +1,4 @@
-<% img_tag("logo.gif", size: "10*10"%>
+<%= image_tag("logo.gif", size: "10*10"%>
 <p>
   The secretariat
   kenya Magistrates and Judges Association
