--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,10 +1,10 @@
 <%= image_tag("logo.gif", size: "10*10")%>
 <p>
-  The secretariat
-  kenya Magistrates and Judges Association
-  Milimani law courts,2nd floor,room no 244
-  p.o Box 30041-00100
-  Nairobi,Kenya
-  Telephone:3588237
+  The secretariat<br />
+  kenya Magistrates and Judges Association<br/>
+  Milimani law courts,2nd floor,room no 244<br/>
+  p.o Box 30041-00100<br/>
+  Nairobi,Kenya<br/>
+  Telephone:3588237<br/>
   Email kmjasec@yahoo.com,kmjasec@gmail.com
 </p>
