--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -1,4 +1,5 @@
-<table>
+<%= wicked_pdf_stylesheet_link_tag "member"%>
+<table class="table table-striped table-borederd table-condensed table-hover">
   <tr>
     <td>Date</td>
     <td><%= @payment.date.to_date%></td>
