--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,4 +1,5 @@
-  <h1><%= "#{@member.first_name} #{@member.last_name} payments"%></h1>
+<%= wicked_pdf_stylesheet_link_tag "member"%>
+<h1><%= "#{@member.first_name} #{@member.last_name} payments"%></h1>
   <h3><%= @payments.last.date%></h3>
 
   <table class="table table-striped table-bordered table-hover table-condensed">
