--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,4 +1,4 @@
-<%= wicked_pdf_stylesheet_link_tag "member"%>
+<%= wicked_pdf_stylesheet_link_tag "members"%>
 <%= image_tag("logo.gif", size: "10*10")%>
 <p>
   The secretariat<br />
