--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,4 +1,4 @@
-<%= wicked_pdf_stylesheet_link_tag "member"%>
+<%= wicked_pdf_stylesheet_link_tag "members"%>
 <h1><%= "#{@member.first_name} #{@member.last_name} payments"%></h1>
   <h3><%= @payments.last.date%></h3>
 
