--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -1,4 +1,4 @@
-<%= wicked_pdf_stylesheet_link_tag "member"%>
+<%= wicked_pdf_stylesheet_link_tag "members"%>
 <table class="table table-striped table-borederd table-condensed table-hover">
   <tr>
     <td>Date</td>
