--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -2,7 +2,7 @@
 <h1><%= "#{@member.first_name} #{@member.last_name} payments"%></h1>
   <h3><%= @payments.last.date%></h3>
 
-  <table class="table table-striped table-bordered table-hover table-condensed">
+  <table class="table table-striped">
     <tr>
      <th>Date</th>
      <th>Invoice</th>
