--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -8,16 +8,14 @@
  padding-top: 10px;
 }
 
-.pretty th .current {  
-  padding-right: 12px;  
-  background-repeat: no-repeat;  
-  background-position: right center;  
-}  
-.pretty th .asc{
-}  
-  
-.pretty th .desc {   
-  background-image: image-url("images.jpeg");   
-} 
+#pdf_header{
+  margin-top: 5px;
+  margin-bottom: 2px;
+}
+
+
+
+
+
 
 
