--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,4 +1,5 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
+<section id="pdf_header">
 <%= image_tag("logo.gif", size: "10*10")%>
 <p>
   The secretariat<br />
@@ -9,3 +10,4 @@
   Telephone:3588237<br/>
   Email kmjasec@yahoo.com,kmjasec@gmail.com
 </p>
+</section>
