--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -1,5 +1,5 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
-<table class="table table-striped table-borederd table-condensed table-hover">
+<table class="pdf_table table table-striped table-borederd table-condensed table-hover">
   <tr>
     <td>Date</td>
     <td><%= @payment.date.to_date%></td>
