--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -10,12 +10,11 @@
 
 #pdf_header{
   margin-top: 5px;
-  margin-bottom: 2px;
-  color: red;
+  margin-bottom: 2px !important;
 }
 
 .pdf_table{
-  margin-top: 10px;
+  margin-top: 10px !important;
 }
 
 
