--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,6 +1,6 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
 <section id="pdf_header">
-<%= image_tag("logo.gif", size: "10*10")%>
+<%= image_tag("logo.jpg", size: "10*10")%>
 <p>
   The secretariat<br />
   kenya Magistrates and Judges Association<br/>
