--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -29,7 +29,7 @@
       <td><%= payment.mode_of_payment %></td>
       <td><%= payment.cheque_no %></td>
       <td><%= payment.bank_name %></td>
-      <td><%= payment.amount %></td>
+      <td><%= number_to_currency(payment.amount, :unit => "KES") %></td>
       <td><%= payment.balance %></td>
       <td><%= link_to 'Show',[@member, payment], class: "btn btn-mini btn-info"%></td>
       <td><%= link_to 'Destroy', [@member, payment], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"%></td>
