--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 <nav class="navbar navbar-fixed-top">
   <section class="navbar-inner">
     <a class="brand">kenya Magistrates and Judges Association </a>
-    <%if session[:user_id]%>
+
     <ul class="nav pull-right">
-      <li><%= link_to "Home", home_path%></li>
+
       <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         Payment Charges <b class="caret"></b>
@@ -33,33 +33,28 @@
       </ul>
       </li>
       <li><%= link_to "Invoice", invoice_path%></li>
-      <li><%= link_to "Payments", all_payments_path%></li>
-      <li><%= link_to "Late payments", judges_with_late_payments_path%></li>
+      <li><%= link_to "Payments", payments_path%></li>
+      <li><%= link_to "Late payments", judges_with_balances_path%></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
          Users<b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-          <li><%= link_to 'View Users', users_path%><li>
-          <li><%= link_to "Add a new user", new_user_path%></li>
+
+
         </ul>
       </li>
 
-      <li><%= link_to 'Logout', logout_path, :method => :delete %></li>
-
     </ul>
-    <%else%>
-      <ul class="nav pull-right">
-       <li> <%= link_to "Sign in", login_path%><li>
-      </ul>
-    <%end%>
+
   </section>
 </nav>
 </header>
-<section id="main">
-
+<div class="container-fluid", id="main">
+ <p class="notice"><%= notice %></p>
+ <p class="alert"><%= alert %></p>
 <%= yield %>
-</section>
+</div>
 
 </body>
 </html>
