--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,6 +1,6 @@
 <span class="label label-success"><%= notice %></span>
 
-<table class="table table-striped table-borederd table-condensed table-hover">
+<table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
     <th>First name</th>
     <th>Last name</th>
