--- a/app/views/payment_plans/index.html.erb
+++ b/app/views/payment_plans/index.html.erb
@@ -19,7 +19,7 @@
     <td><%= payment_plan.created_at.to_date%></td>
     <td><%= link_to 'Show', payment_plan, class: "btn btn-mini btn-info"%></td>
     <td><%= link_to 'Edit', edit_payment_plan_path(payment_plan), class: "btn btn-mini btn-warning" %></td>
-    <td><%= link_to 'Destroy', payment_plan, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-mini btn-danger" %></td>
+    <td><%= link_to 'Delete', payment_plan, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-mini btn-danger" %></td>
   </tr>
 <% end %>
 </table>
