--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -4,11 +4,13 @@
 </ul>
 <section>
   <section class="row-fluid">
-  <h1 class="span11"><%= "#{@member.first_name}'s payments"%></h1>
+  <h3 class="span8"><%= "#{@member.first_name}'s payments"%></h3>
+  <section class="span3"><%= render "stats_per_member"%></section>
   <%if @member.ever_active?%>
-  <%= link_to image_tag("pdf.jpeg", size: "40x20"), member_payments_path(@member, format: :pdf), class: "span1 pull-right"%>
+  <%= link_to image_tag("pdf.jpeg", size: "40x20", title: "last 12"), member_payments_path(@member, format: :pdf), class: "span1 pull-right"%>
   <%end%>
   </secion>
+
   <table class="table table-striped table-bordered table-hover table-condensed">
     <tr>
      <th>Date</th>
@@ -25,19 +27,21 @@
   <% @payments.each do |payment| %>
     <tr>
       <td><%= payment.date%></td>
-      <td><%= number_to_currency(payment.invoice, :unit => "KES")%></td>
+      <td><%= number_to_currency(payment.invoice, :unit => "KES", :format => "%n %u")%></td>
       <td><%= payment.mode_of_payment %></td>
       <td><%= payment.cheque_no %></td>
       <td><%= payment.bank_name %></td>
-      <td><%= number_to_currency(payment.amount, :unit => "KES")%></td>
-      <td><%= number_to_currency(payment.balance, :unit => "KES")%></td>
+      <td><%= number_to_currency(payment.amount, :unit => "KES", :format => "%n %u")%></td>
+      <td><%= number_to_currency(payment.balance, :unit => "KES", :format => "%n %u")%></td>
       <td><%= link_to 'Show',[@member, payment], class: "btn btn-mini btn-info"%></td>
-      <td><%= link_to 'Destroy', [@member, payment], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"%></td>
+      <td><%= link_to 'Delete', [@member, payment], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"%></td>
     </tr>
   <% end %>
   </table>
 
   <br />
 
-  <%= link_to "Back", @member, class: "btn"%>
 </section>
+<%= will_paginate(@payments)%>
+
+<%= link_to "Back", @member, class: "btn"%>
