--- a/app/views/payments/all_payments.html.erb
+++ b/app/views/payments/all_payments.html.erb
@@ -36,7 +36,9 @@
       <td><%= payment.amount %></td>
       <td><%= payment.balance %></td>
       <td><%= link_to 'Show',[payment.member, payment], class:"btn btn-mini btn-info"%></td>
+      <% if can? :destroy, Member%>
       <td><%= link_to 'delete', [payment.member, payment], method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger btn-mini"%></td>
+      <%end%>
     </tr>
   <% end %>
   </table>
