--- a/app/views/payment_plans/index.html.erb
+++ b/app/views/payment_plans/index.html.erb
@@ -18,8 +18,12 @@
     <td><%= payment_plan.kadhi %></td>
     <td><%= payment_plan.created_at.to_date%></td>
     <td><%= link_to 'Show', payment_plan, class: "btn btn-mini btn-info"%></td>
-    <td><%= link_to 'Edit', edit_payment_plan_path(payment_plan), class: "btn btn-mini btn-warning" %></td>
+    <% if can? :update, PaymentPlan%>
+      <td><%= link_to 'Edit', edit_payment_plan_path(payment_plan), class: "btn btn-mini btn-warning" %></td>
+    <%end%>
+    <% if can? :destroy, PaymentPlan%>
     <td><%= link_to 'Delete', payment_plan, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-mini btn-danger" %></td>
+    <%end%>
   </tr>
 <% end %>
 </table>
