--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -12,7 +12,7 @@
   margin-top: 100px !important;
   margin-bottom: 50px !important;
   p{
-    font-size: 11px;
+    font-size: 11px !important'
   }
 }
 
