--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -2,7 +2,7 @@
 <h5><%= "#{@member.first_name} #{@member.last_name} payments"%></h5>
   <h6><%= @payments.last.date%></h6>
 
-  <table class="pdf_table table table-striped table-condensed table-bordered">
+  <table class="pdf_table table table-striped">
     <tr>
      <th>Date</th>
      <th>Invoice</th>
