--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -10,7 +10,7 @@
 
 #pdf_header{
   margin-top: 100px !important;
-  
+  margin-bottom: 80px !important;
   p{
     font-size: 11px !important;
   }
