--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,5 +1,16 @@
 <div>
 <%= wicked_pdf_stylesheet_link_tag "members"%>
+<section id="pdf_header">
+<p>
+  The secretariat<br />
+  kenya Magistrates and Judges Association<br/>
+  Milimani law courts,2nd floor,room no 244<br/>
+  p.o Box 30041-00100<br/>
+  Nairobi,Kenya<br/>
+  Telephone:3588237<br/>
+  Email kmjasec@yahoo.com,kmjasec@gmail.com
+</p>
+</section>
 <h5><%= "#{@member.first_name} #{@member.last_name} payments"%></h5>
   <h6><%= @payments.last.date%></h6>
 
