--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,6 +1,6 @@
 <div>
 <%= wicked_pdf_stylesheet_link_tag "members"%>
-<section id="pdf_header">
+<section>
 <p>
   The secretariat<br />
   kenya Magistrates and Judges Association<br/>
