--- a/app/views/payments/_header.html.erb
+++ b/app/views/payments/_header.html.erb
@@ -1,12 +1,11 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
 <section id="pdf_header">
 <p>
-  The secretariat<br />
-  kenya Magistrates and Judges Association<br/>
+  KENYA MAGISTRATES AND JUDGES ASSOCIATION<br/>
+  The Secretariat kenya Magistrates and Judges Association<br/>
   Milimani law courts,2nd floor,room no 244<br/>
-  p.o Box 30041-00100<br/>
-  Nairobi,Kenya<br/>
-  Telephone:3588237<br/>
-  Email kmjasec@yahoo.com,kmjasec@gmail.com
+  P.O Box 30041-00100 Nairobi,Kenya<br/>
+  Telephone: 3588237<br/>
+  Email: kmjasec@yahoo.com, kmjasec@gmail.com
 </p>
 </section>
