--- a/app/views/members/_table.html.erb
+++ b/app/views/members/_table.html.erb
@@ -1,11 +1,9 @@
-
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
+    <th><%= sort_link @search, :id, "Membership ID"%></th>
     <th><%= sort_link @search, :first_name,"First Name"%></th>
     <th><%= sort_link @search, :last_name, "Last Name" %></th>
     <th><%= sort_link @search, :designation, "Designation"%></th>
-    <th>Email address</th>
-    <th>Cell number</th>
     <th><%= sort_link @search, :region, "Region"%></th>
     <th><%= sort_link @search, :active, "Active"%></th>
     <th></th>
@@ -15,11 +13,10 @@
 
 <% @members.each do |member| %>
   <tr>
+    <td><%= member.id%></td>
     <td><%= member.first_name %></td>
     <td><%= member.last_name %></td>
     <td><%= member.designation %></td>
-    <td><%= member.email_address %></td>
-    <td><%= member.cell_number %></td>
     <td><%= member.region %></td>
     <td><%= member.active %></td>
     <td><%= link_to 'Show', member, class: "btn btn-mini btn-info" %></td>
