--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,23 +1,21 @@
 <span class="label label-success"><%= notice %></span>
-
+ <%= link_to image_tag("pdf.jpeg", size: "40x20", title: "all members"), member_path(@member, format: :pdf), class: "span1 pull-right"%>
 <table class="table table-striped table-bordered table-condensed table-hover">
   <tr>
+    <th>Membership ID</th>
     <th>First name</th>
     <th>Last name</th>
     <th>Designation</th>
-    <th>Email address</th>
-    <th>Cell number</th>
     <th>Region</th>
     <th>Active</th>
     <th></th>
   </tr>
 
   <tr>
+    <td><%= @member.id%></td>
     <td><%= @member.first_name %></td>
     <td><%= @member.last_name %></td>
     <td><%= @member.designation %></td>
-    <td><%= @member.email_address %></td>
-    <td><%= @member.cell_number %></td>
     <td><%= @member.region %></td>
     <td><%= @member.active %></td>
     <%if can? :update, Member%>
