--- a/app/views/payments/_payment.html.erb
+++ b/app/views/payments/_payment.html.erb
@@ -1,5 +1,9 @@
 <%= wicked_pdf_stylesheet_link_tag "members"%>
-<table class="pdf_table table table-striped table-borederd table-condensed table-hover">
+<table class="table table-striped table-bordered table-condensed table-hover">
+  <tr>
+    <td>Reciept NO.</td>
+    <td><%= @payment.id%></td>
+  </tr>
   <tr>
     <td>Date</td>
     <td><%= @payment.date.to_date%></td>
@@ -9,7 +13,7 @@
     <td><%= "#{@member.first_name} #{@member.last_name}"%></td>
   </tr>
   <tr>
-    <td>Amount of Kshs</td>
+    <td>The amount of Kshs</td>
     <td><%= @payment.amount%></td>
   <tr>
     <td>Balance</td>
@@ -31,3 +35,8 @@
   <tr>
 
 </table>
+<section class="pull-right signature">
+  <p>With Thanks<p><br />
+  <hr>
+  <p>For Kenya Magistrates and Judges Association</p>
+</section>
