--- a/app/views/payments/_payments.html.erb
+++ b/app/views/payments/_payments.html.erb
@@ -1,20 +1,9 @@
-<div>
-<%= wicked_pdf_stylesheet_link_tag "members"%>
-<section>
-<p>
-  The secretariat<br />
-  kenya Magistrates and Judges Association<br/>
-  Milimani law courts,2nd floor,room no 244<br/>
-  p.o Box 30041-00100<br/>
-  Nairobi,Kenya<br/>
-  Telephone:3588237<br/>
-  Email kmjasec@yahoo.com,kmjasec@gmail.com
-</p>
-</section>
-<h5><%= "#{@member.first_name} #{@member.last_name} payments"%></h5>
-  <h6><%= @payments.last.date%></h6>
+<span>STATEMENT<span><br>
+Membership ID: <%= "#{@member.id}"%><br />
+Name: <%= "#{@member.first_name} #{@member.last_name} payments"%><br />
+Date: <%= @payments.last.date%><br />
 
-  <table class="pdf_table table table-striped">
+  <table class="table table-striped table-bordered table-condensed table-hover">
     <tr>
      <th>Date</th>
      <th>Invoice</th>
@@ -24,7 +13,7 @@
      <th>Amount</th>
      <th>Balance</th>
 
-  <% @last_12_payments.each do |payment| %>
+  <% @payments.each do |payment| %>
     <tr>
       <td><%= payment.date%></td>
       <td><%= payment.invoice%></td>
@@ -34,6 +23,6 @@
       <td><%= payment.amount %></td>
       <td><%= payment.balance %></td>
    </tr>
-  <% end %>
-  </table>
-</div>
+ <% end %>
+</table>
+
