--- a/app/views/payments/_search.html.erb
+++ b/app/views/payments/_search.html.erb
@@ -1,5 +1,5 @@
 <%= search_form_for @search, html: {class: "form-search"} do |f|%>
-
+  <%= f.number_field :id_eq, placeholder: "Receipt Number"%>
   <%= f.text_field :member_first_name_cont, placeholder: "First Name"%>
   <%= f.text_field :member_last_name_cont, placeholder: "Last Name"%>
   <h5>sort by</h5>
