--- a/app/views/payments/all_payments.html.erb
+++ b/app/views/payments/all_payments.html.erb
@@ -13,6 +13,7 @@
   <table class="table table-striped table-bordered table-hover table-condensed">
 
    <tr>
+     <th>Receipt Number</th>
      <th>Date</th>
      <th>First Name</th>
      <th>Last Name</th>
@@ -27,6 +28,7 @@
 
   <% @payments.each do |payment| %>
     <tr>
+      <td><%= payment.id%></td>
       <td><%= payment.date%></td>
       <td><%= payment.member.first_name%></td>
       <td><%= payment.member.last_name%></td>
