--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -13,6 +13,7 @@
 
   <table class="table table-striped table-bordered table-hover table-condensed">
     <tr>
+     <th>Receipt No.</th>
      <th>Date</th>
      <th>Invoice</th>
      <th>Mode of payment</th>
@@ -26,6 +27,7 @@
 
   <% @payments.each do |payment| %>
     <tr>
+      <td><%= payment.id%></td>
       <td><%= payment.date%></td>
       <td><%= number_to_currency(payment.invoice, :unit => "KES", :format => "%n %u")%></td>
       <td><%= payment.mode_of_payment %></td>
