--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -8,10 +8,11 @@
 <span class="label label-success"><%= notice %></span>
   <section class="row-fluid">
   <h1 class="span11"><%= "#{@member.first_name}'s payments"%></h1>
-
   </secion>
+<%= link_to image_tag("pdf.jpeg", size: "40x20", title: "payment"), member_payment_path(@member, @payment, format: :pdf), class: "span1 pull-right"%>
 <table class="table table-striped table-bordered table-hover table-condensed">
     <tr>
+     <th>RECEIPT NO.</th>
      <th>Date</th>
      <th>Invoice</th>
      <th>Mode of payment</th>
@@ -23,6 +24,7 @@
     </tr>
 
     <tr>
+      <td><%= @payment.id%></td>
       <td><%= @payment.date%></td>
       <td><%= number_to_currency(@payment.invoice, :unit => "KES", :format => "%n %u")%></td>
       <td><%= @payment.mode_of_payment %></td>
